@@ -1,9 +1,9 @@
 pygame credits
 Thanks to everyone who made this possible, including:
 
-- Jan Ekhol, Ray Kelm, and Peter Nicolai for initial design advise
-
 - David Clark for packaging and help with releases
+
+- Jan Ekhol, Ray Kelm, and Peter Nicolai for initial design advise
 
 - Python and the team behind it, headed by Guido van Rossum
   http://www.python.org
